--- a/ietf/templates/codematch/index.html
+++ b/ietf/templates/codematch/index.html
@@ -24,14 +24,14 @@
 		  <div style="margin: 20px 0">
 			<i class="icon ion-arrow-shrink" style="font-size: 30px; float: left; padding-top:5px"></i>
 			<p style="padding-left: 44px">
-			<a href="{% url "ietf.codematch.matches.views.showlist" %}">CodeMatches</a><br />
+			<a href="{% url "ietf.codematch.matches.views.show_list" %}">CodeMatches</a><br />
 			Who's Implementing what?</p>
 		  </div>
 		  
 		   <div>
 			<i class="fa fa-microphone" style="font-size: 30px; float: left; padding-top:5px"></i>
 			<p style="padding-left: 44px">
-			<a href="{% url "ietf.codematch.requests.views.showlist" %}"> CodeRequests</a><br />
+			<a href="{% url "ietf.codematch.requests.views.show_list" %}"> CodeRequests</a><br />
 			Which coding opportunities are offered by the IETF?</p>
 		  </div>
 		  
