--- a/ietf/templates/codematch/matches/list.html
+++ b/ietf/templates/codematch/matches/list.html
@@ -61,10 +61,6 @@
                                 <a href="#">Area</a> | 
                                 <a href="#">Working Group</a>
                             </div>
-                            <div class="widget-icons pull-right">
-                                <a href="#" class="wminimize"><i class="fa fa-chevron-up"></i></a>
-                                <a href="#" class="wclose"><i class="fa fa-times"></i></a>
-                            </div>
                             <div class="clearfix"></div>
                         </div>
                         <div class="widget-content referrer">
@@ -83,7 +79,7 @@
 		                                    	{% if projectcontainer.code_request == None %}
 		                                    	CodeRequest: 	 <a href="#">None</a>
 		                                    	{% else %}
-		                                    	CodeRequest: 	 <a href="{% url 'ietf.codematch.requests.views.show' projectcontainer.id %}">{{ projectcontainer.code_request.id }}</a>
+		                                    	CodeRequest: 	 <a href="{% url 'ietf.codematch.requests.views.show' projectcontainer.id %}">{{ projectcontainer.title }}</a>
 		                                    	{% endif %} 
 		                                    	| Protocol:  	 <a href="#">{{ projectcontainer.protocol }}</a> 
 		                                    	| Area:    	 	 <a href="#">?</a> 
@@ -97,8 +93,12 @@
                             </div>
                             <div class="widget-foot">
                                 <p class="buttonlist">
-                                <a class="btn btn-default" href="{% url "ietf.codematch.matches.views.new" %}">New CodeMatch Project</a>
-                                <a class="btn btn-default" href="{% url "ietf.codematch.matches.views.search" %}">Search</a>
+                                {% if user.is_authenticated %}
+                                	<a class="btn btn-default" href="{% url "ietf.codematch.matches.views.new" %}">New CodeMatch Project</a>
+                                {% endif %}
+                                {% if projectcontainers %}
+                                	<a class="btn btn-default" href="{% url "ietf.codematch.matches.views.search" %}">Search</a>
+                                {% endif %}
                                 </p>
                             </div>
                         </div>
