--- a/ietf/templates/codematch/requests/search.html
+++ b/ietf/templates/codematch/requests/search.html
@@ -16,7 +16,7 @@
 	          <a href="{% url "ietf.codematch.views.index" %}"><i class="fa fa-home"></i> Home</a> 
 	          <!-- Divider -->
 	          <span class="divider">/</span> 
-	          <a href="{% url "ietf.codematch.requests.views.showlist" %}" class="bread-current">Code Requests</a>
+	          <a href="{% url "ietf.codematch.requests.views.show_list" %}" class="bread-current">Code Requests</a>
 	          <span class="divider">/</span>
 	          <a href="#" class="bread-current">Search</a>
 	        </div>
@@ -39,10 +39,6 @@
 							<div class="pull-left">
 								Search
 							</div>
-							<div class="widget-icons pull-right">
-								<a href="#" class="wminimize"><i class="fa fa-chevron-up"></i></a>
-								<a href="#" class="wclose"><i class="fa fa-times"></i></a>
-							</div>
 							<div class="clearfix"></div>
 						</div>
 						<div class="widget-content referrer">
@@ -57,7 +53,7 @@
 								<div class="widget-foot">
 									<p class="buttonlist">
 										
-										<a class="btn btn-default " href="{% url "ietf.codematch.requests.views.showlist" %}">Back</a>
+										<a class="btn btn-default " href="{% url "ietf.codematch.requests.views.show_list" %}">Back</a>
 										
 									</p>
 								</div>
